--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,8 @@
         <activity android:name="activity.WeatherActivity">
 
         </activity>
+        <service android:name="service.AutoUpdateService"/>
+        <receiver android:name="receiver.AutoUpdateReceiver"/>
 
     </application>
 
